# tf-backend-bootstrap

./: .gitignore  README.md  pyproject.toml  tasks.py  terraform.tfvars.example
deployments/dev/: main.tf  variables.tf
deployments/prd/: backend.tf  main.tf  variables.tf
deployments/uat/: main.tf
docs/diagrams/: README.md  rds_backend.drawio
infra-my-project/dev/: backend.tf  main.tf  outputs.tf  variables-common.tf  variables.tf
infra-my-project/prd/: backend.tf
infra-my-project/uat/: backend.tf  main.tf  variables.tf
infra-tf-state/dev/: main.tf  outputs.tf  variables.tf
infra-tf-state/prd/: main.tf  outputs.tf  variables.tf
infra-tf-state/uat/: main.tf  outputs.tf  variables.tf
modules/my_project_module/: main.tf  outputs.tf  variables.tf
modules/my_token_architecture/: main.tf  outputs.tf  variables.tf
modules/my_token_architecture/storage/iam/: main.tf  outputs.tf  variables.tf
modules/my_token_architecture/storage/s3/: main.tf  outputs.tf
modules/state_backend_rds/: main.tf  outputs.tf  variables.tf  versions.tf  vpc.tf
modules/state_backend_s3_dynamo_db/: README.md  dynamodb.tf  iam.tf  main.tf  outputs.tf  s3.tf  variables.tf  versions.tf
modules/vpc_jumpbox/: main.tf  outputs.tf  variables.tf
