[tool.poetry]
name = "tf-backend-bootstrap"
version = "0.1.0"
description = ""
authors = ["Josh Peak <neozenith.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tf_backend_bootstrap"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
invoke = "^2.1.3"
boto3 = "^1.26.163"
invoke-common-tasks = {version = "0.4.0-b1", extras = ["all"]}


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
import_heading_stdlib = "Standard Library"
import_heading_firstparty = "Our Libraries"
import_heading_thirdparty = "Third Party"

[tool.mypy]
exclude = ["tests/", "tasks\\.py"]
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
follow_imports = "silent"
disallow_incomplete_defs = true
disallow_untyped_defs = false
strict = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s -vvv --color=yes --cov=. --no-cov-on-fail"

[tool.coverage.run]
branch = true
omit = ["tests/*", "**/__init__.py", "tasks.py"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
